WordCamp Status: Improvements to public interface

--- a/assets/css/wordcamp-status.css
+++ b/assets/css/wordcamp-status.css
@@ -3,6 +3,8 @@
 	background: transparent;
 	border: 0;
 	cursor: pointer;
+	display: inline-block;
+	vertical-align: middle;
 }
 
 #status-log-bulk-bar .status-log-bulk-toggle {
